1.6/_sources/modules/generated/sklearn.cross_decomposition.PLSCanonical.rst.txt
PLSCanonical
============

.. currentmodule:: sklearn.cross_decomposition

.. autoclass:: PLSCanonical
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.cross_decomposition.PLSCanonical sklearn.cross_decomposition.PLSCanonical.__init__ sklearn.cross_decomposition.PLSCanonical.fit sklearn.cross_decomposition.PLSCanonical.fit_transform sklearn.cross_decomposition.PLSCanonical.get_feature_names_out sklearn.cross_decomposition.PLSCanonical.get_metadata_routing sklearn.cross_decomposition.PLSCanonical.get_params sklearn.cross_decomposition.PLSCanonical.inverse_transform sklearn.cross_decomposition.PLSCanonical.predict sklearn.cross_decomposition.PLSCanonical.score sklearn.cross_decomposition.PLSCanonical.set_output sklearn.cross_decomposition.PLSCanonical.set_params sklearn.cross_decomposition.PLSCanonical.set_predict_request sklearn.cross_decomposition.PLSCanonical.set_score_request sklearn.cross_decomposition.PLSCanonical.set_transform_request sklearn.cross_decomposition.PLSCanonical.transform 
   :add-heading: Gallery examples
   :heading-level: -