1.7/_sources/modules/generated/sklearn.cross_decomposition.PLSCanonical.rst.txt
PLSCanonical
============

.. currentmodule:: sklearn.cross_decomposition

.. autoclass:: PLSCanonical
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.cross_decomposition.PLSCanonical sklearn.cross_decomposition.PLSCanonical.__delattr__ sklearn.cross_decomposition.PLSCanonical.__dir__ sklearn.cross_decomposition.PLSCanonical.__eq__ sklearn.cross_decomposition.PLSCanonical.__format__ sklearn.cross_decomposition.PLSCanonical.__ge__ sklearn.cross_decomposition.PLSCanonical.__getattribute__ sklearn.cross_decomposition.PLSCanonical.__getstate__ sklearn.cross_decomposition.PLSCanonical.__gt__ sklearn.cross_decomposition.PLSCanonical.__hash__ sklearn.cross_decomposition.PLSCanonical.__init__ sklearn.cross_decomposition.PLSCanonical.__init_subclass__ sklearn.cross_decomposition.PLSCanonical.__le__ sklearn.cross_decomposition.PLSCanonical.__lt__ sklearn.cross_decomposition.PLSCanonical.__ne__ sklearn.cross_decomposition.PLSCanonical.__new__ sklearn.cross_decomposition.PLSCanonical.__reduce__ sklearn.cross_decomposition.PLSCanonical.__reduce_ex__ sklearn.cross_decomposition.PLSCanonical.__repr__ sklearn.cross_decomposition.PLSCanonical.__setattr__ sklearn.cross_decomposition.PLSCanonical.__setstate__ sklearn.cross_decomposition.PLSCanonical.__sizeof__ sklearn.cross_decomposition.PLSCanonical.__sklearn_clone__ sklearn.cross_decomposition.PLSCanonical.__sklearn_tags__ sklearn.cross_decomposition.PLSCanonical.__str__ sklearn.cross_decomposition.PLSCanonical.__subclasshook__ sklearn.cross_decomposition.PLSCanonical._build_request_for_signature sklearn.cross_decomposition.PLSCanonical._get_default_requests sklearn.cross_decomposition.PLSCanonical._get_doc_link sklearn.cross_decomposition.PLSCanonical._get_metadata_request sklearn.cross_decomposition.PLSCanonical._get_param_names sklearn.cross_decomposition.PLSCanonical._get_params_html sklearn.cross_decomposition.PLSCanonical._html_repr sklearn.cross_decomposition.PLSCanonical._repr_html_inner sklearn.cross_decomposition.PLSCanonical._repr_mimebundle_ sklearn.cross_decomposition.PLSCanonical._validate_params sklearn.cross_decomposition.PLSCanonical.fit sklearn.cross_decomposition.PLSCanonical.fit_transform sklearn.cross_decomposition.PLSCanonical.get_feature_names_out sklearn.cross_decomposition.PLSCanonical.get_metadata_routing sklearn.cross_decomposition.PLSCanonical.get_params sklearn.cross_decomposition.PLSCanonical.inverse_transform sklearn.cross_decomposition.PLSCanonical.predict sklearn.cross_decomposition.PLSCanonical.score sklearn.cross_decomposition.PLSCanonical.set_output sklearn.cross_decomposition.PLSCanonical.set_params sklearn.cross_decomposition.PLSCanonical.set_predict_request sklearn.cross_decomposition.PLSCanonical.set_score_request sklearn.cross_decomposition.PLSCanonical.set_transform_request sklearn.cross_decomposition.PLSCanonical.transform 
   :add-heading: Gallery examples
   :heading-level: -